Add styles to sidebar.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img class="main-icon" src="icons/view-dashboard.svg" alt="view-dashboard">
             <div><p>Dashboard</p></div>
         </div>
-        <ul class="list-one">
+        <ul>
             <li><img class="icons" src="icons/home.svg" alt="home">
             <div><p>Home</p></div></li>
 
@@ -24,7 +24,7 @@
             <li><img class="icons" src="icons/message-reply.svg" alt="message-reply">
             <div><p>Messages</p></div></li>
 
-            <li><img class="icons" src="icons/clock-time-three.svg" alt="">
+            <li><img class="icons" src="icons/clock-time-three.svg" alt="clock-time-three">
             <div><p>History</p></div></li>
 
             <li><img class="icons" src="icons/note-multiple.svg" alt="notes">
@@ -34,9 +34,34 @@
             <div><p>Communities</p></div></li>
 
         </ul>
+
+        <ul>
+            <li>
+                <img src="icons/cog.svg" alt="cog" class="icons">
+                <div>
+                    <p>Settings</p>
+                </div>
+            </li>
+            <li>
+                <img src="icons/help-box.svg" alt="help-box" class="icons">
+                <div>
+                    <p>Support</p>
+                </div>
+            </li>
+            <li>
+                <img src="icons/shield-check.svg" alt="shield-check" class="icons">
+                <div>
+                    <p>Privacy</p>
+                </div>
+            </li>
+        </ul>
     </aside>
-    <header></header>
-    <main></main>
+
+    <div class="containers">
+        <header></header>
+        <main></main>
+    </div>
+
     
 </body>
 </html>
