Add CSS styles to sidebar.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img class="main-icon" src="icons/view-dashboard.svg" alt="view-dashboard">
             <div><p>Dashboard</p></div>
         </div>
-        <ul>
+        <ul class="sidebar-ul1">
             <li><img class="icons" src="icons/home.svg" alt="home">
             <div><p>Home</p></div></li>
 
