Add header HTML structure.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,41 @@
     </aside>
 
     <div class="containers">
-        <header></header>
+
+        <header>
+
+            <div class="search-bar">
+                <form action="/action_page.php">
+                    <label for="finding">
+                        <img class="icons" src="icons/magnify.svg" alt="magnify">
+                    </label>
+                    <input type="search" name="finding" id="finding">
+                </form>
+                <div class="user-notification">
+                    <img class="icons" src="icons/bell-ring-outline.svg" alt="bell-ring-outline">
+                    <img class="second-icons" src="svg_images/jean_victor_balin_ill_house_01.svg" alt="ill_house">
+                </div>
+                <div class="user_name">
+                    <p>Josue De Los Santos</p>
+                </div>
+            </div>
+
+            <div class="user">
+                <div class="user-greeting">
+                    <img class="greeting-icon" src="svg_images/jean_victor_balin_ill_house_01.svg" alt="ill_house">
+                    <div class="greeting-title">
+                        <p>Hi there,</p>
+                        <p>Josue De Los Santos (@Josue)</p>
+                    </div>
+                </div>
+                <div class="user-options">
+                    <input type="button" value="New">
+                    <input type="button" value="Upload">
+                    <input type="button" value="Share">
+                </div>
+            </div>
+
+        </header>
         <main></main>
     </div>
 
