Add header CSS styles.

--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
 
             <div class="search-bar">
                 <form action="/action_page.php">
-                    <label for="finding">
+                    <div class="search-image">
                         <img class="icons" src="icons/magnify.svg" alt="magnify">
-                    </label>
+                    </div>
                     <input type="search" name="finding" id="finding">
                 </form>
                 <div class="user-notification">
                     <img class="icons" src="icons/bell-ring-outline.svg" alt="bell-ring-outline">
                     <img class="second-icons" src="svg_images/jean_victor_balin_ill_house_01.svg" alt="ill_house">
-                </div>
-                <div class="user_name">
-                    <p>Josue De Los Santos</p>
+                    <div class="user_name">
+                        <p>Josue De Los Santos</p>
+                    </div>
                 </div>
             </div>
 
@@ -81,8 +81,8 @@
                 <div class="user-greeting">
                     <img class="greeting-icon" src="svg_images/jean_victor_balin_ill_house_01.svg" alt="ill_house">
                     <div class="greeting-title">
-                        <p>Hi there,</p>
-                        <p>Josue De Los Santos (@Josue)</p>
+                        <p class="p-title1">Hi there,</p>
+                        <p class="p-title2">Josue De Los Santos (@Josue)</p>
                     </div>
                 </div>
                 <div class="user-options">
