Add HTML structure to main sections.

--- a/index.html
+++ b/index.html
@@ -93,9 +93,118 @@
             </div>
 
         </header>
-        <main></main>
+        
+        <main>
+            <section class="projects">
+
+                <div class="projects-title">
+                    <p>Your Projects</p>
+                </div>
+
+                <div class="project-cards">
+
+                    <div class="pcard">
+                        <div class="card-info">
+                            <h4>Super Cool Project</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laudantium eius quis beatae ullam facilis pariatur
+                            expedita nisi consequuntur obcaecati dolor, eaque inventore unde veniam tempore, laboriosam suscipit animi excepturi.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="icons" src="icons/star-plus-outline.svg" alt="star-plus-outline">
+                            <img class="icons" src="icons/eye-plus-outline.svg" alt="eye-plus-outline">
+                            <img class="icons" src="icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+
+                    <div class="pcard">
+                        <div class="card-info">
+                            <h4>Impossible App</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laudantium eius quis beatae ullam facilis pariatur
+                            expedita nisi consequuntur obcaecati dolor, eaque inventore unde veniam tempore, laboriosam suscipit animi excepturi.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="icons" src="icons/star-plus-outline.svg" alt="star-plus-outline">
+                            <img class="icons" src="icons/eye-plus-outline.svg" alt="eye-plus-outline">
+                            <img class="icons" src="icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+
+                    <div class="pcard">
+                        <div class="card-info">
+                            <h4>Ad Blocker</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laudantium eius quis beatae ullam facilis pariatur
+                            expedita nisi consequuntur obcaecati dolor, eaque inventore unde veniam tempore, laboriosam suscipit animi excepturi.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="icons" src="icons/star-plus-outline.svg" alt="star-plus-outline">
+                            <img class="icons" src="icons/eye-plus-outline.svg" alt="eye-plus-outline">
+                            <img class="icons" src="icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+
+                    <div class="pcard">
+                        <div class="card-info">
+                            <h4>Less Cool Project</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laudantium eius quis beatae ullam facilis pariatur
+                            expedita nisi consequuntur obcaecati dolor, eaque inventore unde veniam tempore, laboriosam suscipit animi excepturi.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="icons" src="icons/star-plus-outline.svg" alt="star-plus-outline">
+                            <img class="icons" src="icons/eye-plus-outline.svg" alt="eye-plus-outline">
+                            <img class="icons" src="icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+
+                    <div class="pcard">
+                        <div class="card-info">
+                            <h4>Easy Peasy App</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laudantium eius quis beatae ullam facilis pariatur
+                            expedita nisi consequuntur obcaecati dolor, eaque inventore unde veniam tempore, laboriosam suscipit animi excepturi.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="icons" src="icons/star-plus-outline.svg" alt="star-plus-outline">
+                            <img class="icons" src="icons/eye-plus-outline.svg" alt="eye-plus-outline">
+                            <img class="icons" src="icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+
+                    <div class="pcard">
+                        <div class="card-info">
+                            <h4>Money Maker</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates laudantium eius quis beatae ullam facilis pariatur
+                            expedita nisi consequuntur obcaecati dolor, eaque inventore unde veniam tempore, laboriosam suscipit animi excepturi.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img class="icons" src="icons/star-plus-outline.svg" alt="star-plus-outline">
+                            <img class="icons" src="icons/eye-plus-outline.svg" alt="eye-plus-outline">
+                            <img class="icons" src="icons/source-fork.svg" alt="source-fork">
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
+
+            <section class="announcements">
+
+                <div class="announcements-title">
+                    <p>Announcements</p>
+                </div>
+
+                <div class="acard1"></div>
+
+                <div class="trending-title">
+                    <p>Trending</p>
+                </div>
+
+                <div class="acard2"></div>
+
+            </section>
+        </main>
     </div>
 
     
 </body>
 </html>
+
+
