Add HTML and CSS for 'announcements' and 'trending' cards.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img class="greeting-icon" src="svg_images/jean_victor_balin_ill_house_01.svg" alt="ill_house">
                     <div class="greeting-title">
                         <p class="p-title1">Hi there,</p>
-                        <p class="p-title2">Josue De Los Santos (@Josue)</p>
+                        <p class="p-title2">Josue De Los Santos (@josue)</p>
                     </div>
                 </div>
                 <div class="user-options">
@@ -191,13 +191,65 @@
                     <p>Announcements</p>
                 </div>
 
-                <div class="acard1"></div>
+                <div class="acard1">
+
+                    <div class="news">
+                        <h5>Site Maintenance</h5>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. doloribus, tempora
+                        dolores enetur delectus minus.</p>
+                    </div>
+
+                    <div class="news">
+                        <h5>Community Share Day</h5>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. doloribus, tempora
+                            dolores enetur delectus minus.</p>
+                    </div>
+                    <div class="news">
+                        <h5>Updated Privacy Policy</h5>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. doloribus, tempora
+                            dolores enetur delectus minus.</p>
+                    </div>
+                </div>
 
                 <div class="trending-title">
                     <p>Trending</p>
                 </div>
 
-                <div class="acard2"></div>
+                <div class="acard2">
+
+                    <div class="trending-users">
+                        <img class="second-icons" src="svg_images/jean_victor_balin_ill_house_02.svg" alt="ill_house">
+                        <div class="users-info">
+                            <h6>@tegan</h6>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>
+
+                    <div class="trending-users">
+                        <img class="second-icons" src="svg_images/jean_victor_balin_ill_house_01.svg" alt="ill_house">
+                        <div class="users-info">
+                            <h6>@jouse</h6>
+                            <p>Super Cool Project</p>
+                        </div>
+                    </div>
+
+                    <div class="trending-users">
+                        <img class="second-icons" src="svg_images/jean_victor_balin_ill_house_03.svg" alt="ill_house">
+                        <div class="users-info">
+                            <h6>@kendall</h6>
+                            <p>Life Changing App</p>
+                        </div>
+                    </div>
+
+                    <div class="trending-users">
+                        <img class="second-icons" src="svg_images/jean_victor_balin_ill_house_04.svg" alt="ill_house">
+                        <div class="users-info">
+                            <h6>@alex</h6>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
+
+                </div>
 
             </section>
         </main>
