Changed user-info from 'jouse' to 'josue'.

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <div class="trending-users">
                         <img class="second-icons" src="svg_images/jean_victor_balin_ill_house_01.svg" alt="ill_house">
                         <div class="users-info">
-                            <h6>@jouse</h6>
+                            <h6>@josue</h6>
                             <p>Super Cool Project</p>
                         </div>
                     </div>
